# shenlan_college_control_algorithm

./: README.md  new_func1  one.txt
project1_ws/src/carla_ros_bridge_ros1/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
project1_ws/src/vehicle_control/: CMakeLists.txt  package.xml
project1_ws/src/vehicle_control/data/: reference_line_Town01.txt  reference_line_Town02.txt
project1_ws/src/vehicle_control/include/: common.h  pid_controller.h
project1_ws/src/vehicle_control/src/: pid_controller.cpp  reference_line.cpp  vehicle_control.cpp
project3_ws/devel/: .catkin  setup.sh
project3_ws/devel/include/rosapi/: DeleteParam.h  DeleteParamResponse.h  GetActionServersRequest.h  GetParam.h  GetParamNamesRequest.h  GetParamRequest.h  GetParamResponse.h  GetTimeRequest.h  GetTimeResponse.h  HasParam.h  HasParamRequest.h  HasParamResponse.h  MessageDetailsResponse.h  NodeDetails.h  Publishers.h  PublishersRequest.h  ServiceHostResponse.h  ServiceNodeRequest.h  ServiceNodeResponse.h  ServiceProviders.h  ServiceProvidersResponse.h  ServiceRequestDetails.h  ServiceRequestDetailsResponse.h  ServiceType.h  ServiceTypeRequest.h  Services.h  ServicesRequest.h  SetParam.h  SetParamResponse.h  SubscribersRequest.h  TopicType.h  TopicTypeRequest.h  TopicsForType.h  TopicsForTypeResponse.h  TopicsRequest.h
project3_ws/devel/include/rosbridge_library/: AddTwoInts.h  Num.h  SendBytesRequest.h  SendBytesResponse.h  TestArrayRequestResponse.h  TestChar.h  TestDurationArray.h  TestEmptyResponse.h  TestHeader.h  TestHeaderArray.h  TestMultipleRequestFieldsResponse.h  TestMultipleResponseFieldsResponse.h  TestNestedService.h  TestNestedServiceRequest.h  TestNestedServiceResponse.h  TestResponseOnlyResponse.h
project3_ws/devel/lib/localization/: localization
project3_ws/devel/lib/lqr_control/: lqr_control_node
project3_ws/devel/lib/pkgconfig/: localization.pc  lqr_control.pc  referenceline.pc  ros_viz_tools.pc  rosapi.pc  rosbridge_library.pc  rosbridge_server.pc  vehicle_control.pc
project3_ws/devel/lib/referenceline/: referenceline
project3_ws/devel/lib/ros_viz_tools/: demo_node
project3_ws/devel/lib/vehicle_control/: vehicle_control
project3_ws/src/localization/: CMakeLists.txt
project3_ws/src/localization/src/: main.cpp
project3_ws/src/lqr_control/: CMakeLists.txt
project3_ws/src/lqr_control/data/: cube_town_record_line.txt  reference_line.txt
project3_ws/src/lqr_control/include/: common.h  lqr_controller.h  lqr_controller_node.h  pid_controller.h  reference_line.h
project3_ws/src/lqr_control/launch/: demo.launch
project3_ws/src/lqr_control/rviz/: lqr_control.rviz
project3_ws/src/lqr_control/src/: lqr_controller.cpp  lqr_controller_node.cpp  main.cpp  pid_controller.cpp  reference_line.cpp
project3_ws/src/maps/: BorregasAve.osm  CubeTown.xodr  SingleLaneRoad.xodr  Straight2LaneSameCurbRightIntersection.xodr  TestMap.xodr
project3_ws/src/referenceline/: CMakeLists.txt
project3_ws/src/referenceline/data/: SingleLaneRoad.txt  cube_town_reference_line.txt
project3_ws/src/referenceline/include/: common.h  reference_line.h
project3_ws/src/referenceline/src/: main.cpp
project3_ws/src/vehicle_control/: package.xml
project3_ws/src/vehicle_control/data/: reference_line.txt
project3_ws/src/vehicle_control/include/: pid_controller.h
project3_ws/src/vehicle_control/src/: pid_controller.cpp  vehicle_control.cpp
shenlan_mpc_project/devel/: .catkin  .rosinstall
shenlan_mpc_project/src/mpc_control/: CMakeLists.txt  package.xml
shenlan_mpc_project/src/mpc_control/include/: common.h  map.h  mpc_controller.h  mpc_osqp.h  reference_line.h
shenlan_mpc_project/src/mpc_control/src/: main.cpp  mpc_controller.cpp  mpc_osqp.cpp  reference_line.cpp
shenlan_project2_ws/devel/: .catkin  .rosinstall  setup.sh
shenlan_project2_ws/devel/include/rosapi/: DeleteParamRequest.h  GetActionServers.h  GetActionServersResponse.h  GetParamNames.h  GetParamNamesResponse.h  GetTime.h  MessageDetails.h  MessageDetailsRequest.h  NodeDetailsRequest.h  NodeDetailsResponse.h  Nodes.h  NodesRequest.h  NodesResponse.h  PublishersResponse.h  SearchParam.h  SearchParamRequest.h  SearchParamResponse.h  ServiceHost.h  ServiceHostRequest.h  ServiceNode.h  Subscribers.h  (+17 more)
shenlan_project2_ws/src/localization/: package.xml
shenlan_project2_ws/src/stanley_control/: CMakeLists.txt
shenlan_project2_ws/src/stanley_control/data/: reference_line.txt
shenlan_project2_ws/src/stanley_control/include/: common.h  stanley_control.h
shenlan_project2_ws/src/stanley_control/src/: main.cpp  pid_controller.cpp  reference_line.cpp  stanley_control.cpp
shenlan_project2_ws/src/vehicle_control/: CMakeLists.txt
shenlan_project2_ws/src/vehicle_control/include/: vehicle_control.h
(+714 files in other folders)
